--- a/content/redovisning/01_kmom01.md
+++ b/content/redovisning/01_kmom01.md
@@ -3,4 +3,26 @@
 Redovisning kmom01
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/01_kmom01.md`.
+#### Gör din egen kunskapsinventering baserat på PHP The Right Way, berätta om dina styrkor och svagheter som du vill förstärka under kursen och det kommande året.
+
+Jag läste artiklet och hittade vissa delar som jag hade redan lite kunskap om dem som till exemple jobba med Date and Time
+eller olika standard som man kan förlja dem för att skriva sin kod på ett bättre och tidlygare sätt. Däremot hittade jag vissa saker som var ganska svårare för mig och jag behöver jobba med dem och höga min kunskap om dem som till exempel PDO och PEAR trots att jag har jobbat lite med dem tidigare men jag känner mig jag behöver att bli mycket bättre på dem.
+
+#### Vilket blev resultatet från din mini-undersökning om vilka ramverk som för närvarande är mest populära inom PHP (ange källa var du fann informationen)?
+
+Jag kollade på olika sidor och fick veta att Laravel är den bästa ramverk justnu. Symfony fick andra platsen på min undersökning och tredje platsen blev CodeIgniter. De tre är mest populara och trenda just nu.
+Källa: https://hackr.io/blog/best-php-frameworks
+
+#### Berätta om din syn/erfarenhet generellt kring communities och specifikt communities inom opensource och programmeringsdomänen.
+Jag tycker att communities är ett bra plats för att höja sina kunska och se olika perspektiv och erfarenhet av olika personer som till exemple det finns stackoverflow som är ett stor community för olika programmering språk. Ibland jag själv fastnar men något och kan inte lösa problemet. Då försöker jag att leta efter en lösning i stackoverflow och det löser mina problem oftas.
+
+#### Vad tror du om begreppet “en ramverkslös värld” som framfördes i videon? 
+Jag tycker att ramverk gör oftas mycket lättare att koda men det gör inget om man använder inte ramverk i sin application. Han sa i video att det är mer små packages som laddas ner än själva ramverket idag och jag håller med honom. Jag tycker man behöver inte ladda ner och använda hela en ramverk i sin application utan man kan använda bara dem delar och package som man behöver.
+#### Hur gick det att komma igång med din redovisa-sida?
+Ja, det fanns ingen problem med det och jag löste det lätt.
+
+#### Några funderingar kring arbetet med din kontroller?
+Jag tycker kmom01 var ganska svårt och det tog lång tid av mig. Jag viste inte hur man skapar kontroller och hur man använder vyer men kontroller men videoer hjälpte mig mycket för komma igång med det. Skriva test till kontroller var en annan sak som mycket svårt för mig. Jag hade ingen aning hur man skriver test och till slut hittade jag video från oophp kmom04 som vissar hur man skriver en test.
+
+#### Vilken är din TIL för detta kmom?
+Jag lärde mig skapa kontroller och vyer till kontroller. Jag lärder mig också skriva tester till metoder från mina kontroller.
